<resources>
    <string name="app_name">TipCalculator</string>
    <string name="textView_billAmountHint">textView_billAmount</string>
    <string name="Enter_Amount">Enter Amount</string>
    <string name="percentage">%</string>
    <string name="Tip">Tip</string>
    <string name="Total">Total</string>
    <string name="Tip_Amount">$0.00</string>
    <string name="Total_Amount">$0.00</string>


</resources>