<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="2"
    tools:context="tipcalculator.example.tipcalculator.MainActivity">


    <EditText
        android:id="@+id/editText_BillAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:ems="12"
        android:padding="20dp"
        android:background="@color/purple_200"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/Enter_Amount"
        android:gravity="center_horizontal"
        android:layout_margin="16dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView_BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_gravity="fill_horizontal"
        android:labelFor="@id/editText_BillAmount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:max="100"
        android:progress="15"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:ems="2"
        android:gravity="center_horizontal"
        android:hint="@string/percentage"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/Tip"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"/>



    <TextView
        android:id="@+id/TipAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:hint="@string/Tip_Amount"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:background="@color/teal_200"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/Total"
        android:text="@string/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_row="3"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"/>



    <TextView
        android:id="@+id/TotalAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:padding="20dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:background="@color/teal_200"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:hint="@string/Total_Amount"
        android:textSize="20sp"
        android:textStyle="bold" />

</GridLayout>